im tired ahahaha

--- a/frontend/src/app/components/filter/filter.component.html
+++ b/frontend/src/app/components/filter/filter.component.html
@@ -1,20 +1,14 @@
-<!-- <div *ngFor="let category of categories">
-{{category.name}}
-  <div *ngFor="let subcategory of category.categories">
-    {{subcategory.name}}
-  </div>
-</div> -->
 
-<mat-accordion>
-  <mat-expansion-panel hideToggle *ngFor="let category of categories">
+<mat-accordion  disabled *ngIf="categories">
+  <mat-expansion-panel *ngFor="let category of categories; let i = index">
     <mat-expansion-panel-header>
       <mat-panel-title>
 
 
         <mat-checkbox class="checkbox"
         [checked]="allComplete"
-        [indeterminate]="someComplete()"
-        (change)="setAll($event.checked)">
+        [indeterminate]="someComplete(i)"
+        (change)="setAll(i,$event.checked)">
         </mat-checkbox>
         {{category.name}}
 
@@ -23,10 +17,10 @@
 
     </mat-expansion-panel-header>
       <div class="small">
-        <div *ngFor="let subcategory of category.categories">
+        <div *ngFor="let subcategory of category.categories;">
           <mat-checkbox
-          [(ngModel)]="subtask.completed"
-          (ngModelChange)="updateAllComplete()">
+          [(ngModel)]="subcategory.completed"
+          (ngModelChange)="updateAllComplete(i)">
           {{subcategory.name}}</mat-checkbox>
         </div>
       </div>
@@ -34,3 +28,6 @@
 
   </mat-expansion-panel>
 </mat-accordion>
+
+
+
