--- a/frontend/src/app/components/filter/filter.component.scss
+++ b/frontend/src/app/components/filter/filter.component.scss
@@ -1,18 +1,18 @@
-.small{
-  width: 100%;
-  max-height: 200px;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-.mat-expansion-panel-body {
-  padding: 0 8px 4px;
-}
-.mat-expansion-panel-header {
-  padding: 0 4px;
-}
+// .small{
+//   width: 100%;
+//   max-height: 200px;
+//   overflow-y: auto;
+//   overflow-x: hidden;
+// }
+// .mat-expansion-panel-body {
+//   padding: 0 8px 4px;
+// }
+// .mat-expansion-panel-header {
+//   padding: 0 4px;
+// }
 
-.checkbox{
-  margin: 5px;
-  position: relative;
-  top: 1px;
-}
+// .checkbox{
+//   margin: 5px;
+//   position: relative;
+//   top: 1px;
+// }
