--- a/frontend/src/app/components/filter/filter.component.html
+++ b/frontend/src/app/components/filter/filter.component.html
@@ -1,22 +1,18 @@
-
 <mat-accordion  disabled *ngIf="categories">
   <mat-expansion-panel *ngFor="let category of categories; let i = index">
     <mat-expansion-panel-header>
+      <!-- general category checkbox -->
       <mat-panel-title>
-
-
-        <mat-checkbox class="checkbox"
-        [checked]="allComplete"
-        [indeterminate]="someComplete(i)"
-        (change)="setAll(i,$event.checked)">
-        </mat-checkbox>
-        {{category.name}}
-
-
+          <mat-checkbox class="checkbox"
+          [checked]="allComplete"
+          [indeterminate]="someComplete(i)"
+          (change)="setAll(i,$event.checked)">
+            {{category.name}}
+          </mat-checkbox>
       </mat-panel-title>
 
     </mat-expansion-panel-header>
-      <div class="small">
+      <div class="container-fluid small">
         <div *ngFor="let subcategory of category.categories;">
           <mat-checkbox
           [(ngModel)]="subcategory.completed"
@@ -24,7 +20,6 @@
           {{subcategory.name}}</mat-checkbox>
         </div>
       </div>
-
 
   </mat-expansion-panel>
 </mat-accordion>
