--- a/frontend/src/app/components/tabs/searchresults/venueButton/venueButton.component.html
+++ b/frontend/src/app/components/tabs/searchresults/venueButton/venueButton.component.html
@@ -1,32 +1,23 @@
-<button type="button" class="btn" (click)='navigate()' *ngIf="searchResult.venue">
-  <mat-card>
+<mat-card (click)='navigate()' *ngIf="searchResult.venue">
+  <mat-card-header>
+    <mat-card-title>{{searchResult|null:['venue','name']}}</mat-card-title>
+    <mat-card-subtitle>
+        <p *ngFor="let item of (searchResult|null: ['venue','categories'])" class="inline">{{item.name}}</p>
+    </mat-card-subtitle>
+  </mat-card-header>
 
-    <mat-card-header>
-      <mat-card-title>{{searchResult|null:['venue','name']}}</mat-card-title>
-      <mat-card-subtitle>
-        <div  *ngFor="let item of (searchResult|null: ['venue','categories'])">
-          <p class="inline">{{item.name}}</p>
-        </div>
-      </mat-card-subtitle>
-    </mat-card-header>
-
-    <mat-card-content class="container col">
-      <p>
-        {{searchResult|null:['venue','location','address']}}
-      </p>
-
-      <hr>
-      <span class="row justify-content-end">
-        <mat-icon mat-icon-button matTooltip="share" matTooltipPosition='above' color='accent' class="col-auto md-auto">share</mat-icon>
-        &nbsp;
-        <mat-icon mat-icon-button matTooltip="show on map" matTooltipPosition='above' color='primary' class="col-auto md-auto">map</mat-icon>
-        &nbsp;
-        <mat-icon mat-icon-button matTooltip="add to trip" matTooltipPosition='above' class="col-auto md-auto">playlist_add</mat-icon>
-        &nbsp;
-      </span>
-    </mat-card-content>
-  </mat-card>
-</button>
+  <mat-card-content class="container-fluid col-auto" style="margin-right: 1em;">
+    <p>
+      {{searchResult|null:['venue','location','address']}}
+    </p>
+    <hr>
+    <span class="row justify-content-end">
+      <mat-icon mat-icon-button matTooltip="share" matTooltipPosition='above' color='accent' class="col-auto mr-auto">share</mat-icon>
+      <mat-icon mat-icon-button matTooltip="show on map" matTooltipPosition='above' color='primary' class="col-auto mr-auto">map</mat-icon>
+      <mat-icon mat-icon-button matTooltip="add to trip" matTooltipPosition='above' class="col-auto mr-auto">playlist_add</mat-icon>
+    </span>
+  </mat-card-content>
+</mat-card>
 
 
 
