--- a/frontend/src/app/components/filter/filter.component.scss
+++ b/frontend/src/app/components/filter/filter.component.scss
@@ -1,9 +1,9 @@
-// .small{
+.small{
 //   width: 100%;
-//   max-height: 200px;
-//   overflow-y: auto;
+  max-height: 500px;
+  overflow-y: auto;
 //   overflow-x: hidden;
-// }
+}
 // .mat-expansion-panel-body {
 //   padding: 0 8px 4px;
 // }
