--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -62,7 +62,7 @@
         </div>
 
         <!-- sidebar content -->
-        <div class="container-fluid" style="width: 98%; max-height: 95%; padding: 0; padding-top: 1%; padding-top: 0; margin-left: 0; margin-right: 0; overflow-y: auto;">
+        <div #oi class="container-fluid" style="width: 98%; max-height: 95%; padding: 0; padding-top: 1%; padding-top: 0; margin-left: 0; margin-right: 0; overflow-y: auto;">
             <router-outlet style="height: 100%;"></router-outlet>
         </div>
     </mat-drawer>
