--- a/frontend/src/app/components/filter/filter.component.html
+++ b/frontend/src/app/components/filter/filter.component.html
@@ -1,18 +1,13 @@
-
-<mat-accordion  disabled *ngIf="categories">
+<!-- <mat-accordion  disabled *ngIf="categories">
   <mat-expansion-panel *ngFor="let category of categories; let i = index">
     <mat-expansion-panel-header>
       <mat-panel-title>
-
-
         <mat-checkbox class="checkbox"
         [checked]="allComplete"
         [indeterminate]="someComplete(i)"
         (change)="setAll(i,$event.checked)">
         </mat-checkbox>
         {{category.name}}
-
-
       </mat-panel-title>
 
     </mat-expansion-panel-header>
@@ -24,10 +19,40 @@
           {{subcategory.name}}</mat-checkbox>
         </div>
       </div>
-
-
   </mat-expansion-panel>
-</mat-accordion>
+</mat-accordion> -->
+
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+  <!-- This is the tree node template for leaf nodes -->
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+    <li class="mat-tree-node">
+      <!-- use a disabled button to provide padding for tree leaf -->
+      <button mat-icon-button disabled></button>
+      {{node.name}}
+    </li>
+  </mat-tree-node>
+  <!-- This is the tree node template for expandable nodes -->
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+    <li>
+      <div class="mat-tree-node">
+
+
+        <button mat-icon-button matTreeNodeToggle
+                [attr.aria-label]="'toggle ' + node.name">
+          <mat-icon class="mat-icon-rtl-mirror">
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+          </mat-icon>
+        </button>
+
+
+        {{node.name}}
+      </div>
+      <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+        <ng-container matTreeNodeOutlet></ng-container>
+      </ul>
+    </li>
+  </mat-nested-tree-node>
+</mat-tree>
 
 
 
