--- a/frontend/src/app/components/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/tabs/mytrip/mytrip.component.html
@@ -37,79 +37,79 @@
                         <div class="example-action-buttons">
                             <button mat-button (click)="TripAccordion.openAll()">Expand All</button>
                             <button mat-button (click)="TripAccordion.closeAll()">Collapse All</button>
-                          </div>
+                        </div>
                         <mat-accordion #acc multi>
-                                <mat-expansion-panel *ngFor='let schedule of trip.schedule, let j = index'>
-                                    <mat-expansion-panel-header>
-                                        <mat-panel-title>
-                                            day {{ j + 1 }}
-                                        </mat-panel-title>
-                                        <mat-panel-description>
-                                            {{ displayDay(schedule.day) }} | {{ schedule.day | date }} &nbsp; &mdash; &nbsp; Locations: {{getTotalVenues(schedule)}} &nbsp; &mdash; &nbsp; Price: {{getTotalPrice(schedule)}}$
-                                        </mat-panel-description>
-                                    </mat-expansion-panel-header>
-                                    <div class="container-fluid">
-                                        <table mat-table [dataSource]='trip.schedule[j].venues' style="width: 100%;">
-                                            <!-- venueName -->
-                                            <ng-container matColumnDef="venueName">
-                                                <mat-header-cell *matHeaderCellDef> Venue Name </mat-header-cell>
-                                                <mat-cell *matCellDef="let element"> {{element.venueName}} </mat-cell>
-                                            </ng-container>
+                            <mat-expansion-panel *ngFor='let schedule of trip.schedule, let j = index'>
+                                <mat-expansion-panel-header>
+                                    <mat-panel-title>
+                                        day {{ j + 1 }}
+                                    </mat-panel-title>
+                                    <mat-panel-description>
+                                        {{ displayDay(schedule.day) }} | {{ schedule.day | date }} &nbsp; &mdash; &nbsp; Locations: {{getDayVenues(schedule)}} &nbsp; &mdash; &nbsp; Price: {{getDayPrice(schedule)}}$
+                                    </mat-panel-description>
+                                </mat-expansion-panel-header>
+                                <div class="container-fluid">
+                                    <table mat-table [dataSource]='tableDataSource.data[i].schedule[j].venues' style="width: 100%;">
+                                        <!-- venueName -->
+                                        <ng-container matColumnDef="venueName">
+                                            <mat-header-cell *matHeaderCellDef> Venue Name </mat-header-cell>
+                                            <mat-cell *matCellDef="let element">{{element.venueName}} </mat-cell>
+                                        </ng-container>
 
-                                            <!-- venueCity -->
-                                            <ng-container matColumnDef="venueCity">
-                                                <mat-header-cell *matHeaderCellDef> City </mat-header-cell>
-                                                <mat-cell *matCellDef="let element"> {{element.venueCity}} </mat-cell>
-                                            </ng-container>
-                                            
-                                            <!-- venueAddress -->
-                                            <ng-container matColumnDef="venueAddress">
-                                                <mat-header-cell *matHeaderCellDef> Address </mat-header-cell>
-                                                <mat-cell *matCellDef="let element"> {{element.venueAddress}} </mat-cell>
-                                            </ng-container>
+                                        <!-- venueCity -->
+                                        <ng-container matColumnDef="venueCity">
+                                            <mat-header-cell *matHeaderCellDef> City </mat-header-cell>
+                                            <mat-cell *matCellDef="let element"> {{element.venueCity}} </mat-cell>
+                                        </ng-container>
+                                        
+                                        <!-- venueAddress -->
+                                        <ng-container matColumnDef="venueAddress">
+                                            <mat-header-cell *matHeaderCellDef> Address </mat-header-cell>
+                                            <mat-cell *matCellDef="let element"> {{element.venueAddress}} </mat-cell>
+                                        </ng-container>
 
-                                            <!-- venuePrice -->
-                                            <ng-container matColumnDef="price">
-                                                <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
-                                                <mat-cell *matCellDef="let element"> {{element.price}}$ </mat-cell>
-                                            </ng-container>
+                                        <!-- venuePrice -->
+                                        <ng-container matColumnDef="price">
+                                            <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
+                                            <mat-cell *matCellDef="let element"> {{element.price}}$ </mat-cell>
+                                        </ng-container>
 
-                                            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                                            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-                                        </table>
-                                    </div>
-                                    <br>
-                                    <!-- <ng-template #popcontent ><app-add-venue-popover [tripIndex]='i' [dayIndex]='j' ></app-add-venue-popover></ng-template> -->
-                                    <div class="row justify-content-center">
-                                        <!-- <button mat-mini-fab id="addIcon" [ngbPopover]='popcontent' placement="bottom" [autoClose]="false" class="col-auto align-self-center">
-                                            <mat-icon id='addIcon'>add_location</mat-icon>
-                                        </button> -->
-                                        <button mat-mini-fab id="addIcon" class="col-auto align-self-center" (click)='openAddVenueModal(i, j)' matTooltip='add a venue'>
-                                            <mat-icon id='addIcon'>add_location</mat-icon>
-                                        </button>
-                                    </div>
-                                </mat-expansion-panel>
-                                <!-- <div id="lineBtn">
-                                    <hr id="hrBtn">
-                                    <button mat-mini-fab id="addIcon" [ngbPopover]='popcontent' placement="bottom" [autoClose]="false">
+                                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                                    </table>
+                                </div>
+                                <br>
+                                <!-- <ng-template #popcontent ><app-add-venue-popover [tripIndex]='i' [dayIndex]='j' ></app-add-venue-popover></ng-template> -->
+                                <div class="row justify-content-center">
+                                    <!-- <button mat-mini-fab id="addIcon" [ngbPopover]='popcontent' placement="bottom" [autoClose]="false" class="col-auto align-self-center">
+                                        <mat-icon id='addIcon'>add_location</mat-icon>
+                                    </button> -->
+                                    <button mat-mini-fab id="addIcon" class="col-auto align-self-center" (click)='openAddVenueModal(i, j)' matTooltip='add a venue'>
                                         <mat-icon id='addIcon'>add_location</mat-icon>
                                     </button>
-                                    <hr id="hrBtn">
-                                </div> -->
-                                <br>
-                                <mat-expansion-panel expanded='true'>
-                                    <mat-expansion-panel-header>
-                                        <mat-panel-title>Trip Overview</mat-panel-title>
-                                        <mat-panel-description>All your stats are here</mat-panel-description>   
-                                    </mat-expansion-panel-header>
-                                    <div class="row container-fluid">
-                                        <mat-chip-list>
-                                            <mat-chip color="primary" selected>Distance Traveled: avaaf km</mat-chip>
-                                            <mat-chip color="warn" selected>Places Visited: X</mat-chip>
-                                            <mat-chip color="accent" selected>Price: sdsog $</mat-chip>
-                                        </mat-chip-list>
-                                    </div>
-                                </mat-expansion-panel>
+                                </div>
+                            </mat-expansion-panel>
+                            <!-- <div id="lineBtn">
+                                <hr id="hrBtn">
+                                <button mat-mini-fab id="addIcon" [ngbPopover]='popcontent' placement="bottom" [autoClose]="false">
+                                    <mat-icon id='addIcon'>add_location</mat-icon>
+                                </button>
+                                <hr id="hrBtn">
+                            </div> -->
+                            <br>
+                            <mat-expansion-panel expanded='true'>
+                                <mat-expansion-panel-header>
+                                    <mat-panel-title>Trip Overview</mat-panel-title>
+                                    <mat-panel-description>All your stats are here</mat-panel-description>   
+                                </mat-expansion-panel-header>
+                                <div class="row container-fluid">
+                                    <mat-chip-list>
+                                        <mat-chip color="primary" selected>Distance Traveled: avaaf km</mat-chip>
+                                        <mat-chip color="warn" selected>Places Visited: {{getTotalVenues(trip)}}</mat-chip>
+                                        <mat-chip color="accent" selected>Price: {{getTotalPrice(trip)}}$</mat-chip>
+                                    </mat-chip-list>
+                                </div>
+                            </mat-expansion-panel>
                         </mat-accordion>
                                                     
 
