--- a/frontend/src/app/components/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/tabs/mytrip/mytrip.component.html
@@ -49,11 +49,11 @@
                                     </mat-panel-description>
                                 </mat-expansion-panel-header>
                                 <div class="container-fluid">
-                                    <table mat-table [dataSource]='tableDataSource.data[i].schedule[j].venues' style="width: 100%;">
+                                    <table mat-table [dataSource]='getDataSource(i, j)' style="width: 100%;">
                                         <!-- venueName -->
                                         <ng-container matColumnDef="venueName">
                                             <mat-header-cell *matHeaderCellDef> Venue Name </mat-header-cell>
-                                            <mat-cell *matCellDef="let element">{{element.venueName}} </mat-cell>
+                                            <mat-cell *matCellDef="let element">{{element.venueName}}</mat-cell>
                                         </ng-container>
 
                                         <!-- venueCity -->
