--- a/frontend/src/app/components/filter/filter.component.scss
+++ b/frontend/src/app/components/filter/filter.component.scss
@@ -1,18 +1,31 @@
 .small{
-//   width: 100%;
+  width: 100%;
   max-height: 500px;
   overflow-y: auto;
-//   overflow-x: hidden;
+  overflow-x: hidden;
 }
-// .mat-expansion-panel-body {
-//   padding: 0 8px 4px;
-// }
-// .mat-expansion-panel-header {
-//   padding: 0 4px;
-// }
+.mat-expansion-panel-body {
+  padding: 0 8px 4px;
+}
+.mat-expansion-panel-header {
+  padding: 0 4px;
+}
 
-// .checkbox{
-//   margin: 5px;
-//   position: relative;
-//   top: 1px;
-// }
+.checkbox{
+  margin: 5px;
+  position: relative;
+  top: 1px;
+}
+
+.example-tree-invisible {
+  display: none;
+}
+.example-tree li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
+button{
+  position: absolute;
+  right: 5px;
+}
