--- a/frontend/src/app/components/filter/filter.component.html
+++ b/frontend/src/app/components/filter/filter.component.html
@@ -1,35 +1,33 @@
-<mat-tree [dataSource]="categories" [treeControl]="treeControl"  class="example-tree">
+<mat-tree [dataSource]="categories" [treeControl]="treeControl"  class="example-tree" style="padding-left: 1em;">
   <!-- This is the tree node template for leaf nodes -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
     <li class="mat-tree-node">
       <!-- use a disabled button to provide padding for tree leaf -->
       <button mat-icon-button disabled></button>
-        <mat-checkbox
-        [checked]="node.checked"
-        (change)="clickedActive(node)"
-        >
-        {{node.name}}
-        </mat-checkbox>
+      <mat-checkbox
+      [checked]="node.checked"
+      (change)="clickedActive(node)"
+      >
+      {{node.name}}
+      </mat-checkbox>
     </li>
   </mat-tree-node>
   <!-- This is the tree node template for expandable nodes -->
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
     <li>
       <div class="mat-tree-node">
-
-
         <button mat-icon-button matTreeNodeToggle
                 [attr.aria-label]="'toggle ' + node.name">
           <mat-icon class="mat-icon-rtl-mirror">
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_left'}}
           </mat-icon>
         </button>
-            <mat-checkbox class="example-margin"
-              [checked]="node.checked"
-              [indeterminate]="!node.checked && getCheckedAmount(node) > 0"
-              (change)="clickedActive(node)">
-                {{node.name}}
-            </mat-checkbox>
+        <mat-checkbox class="example-margin"
+          [checked]="node.checked"
+          [indeterminate]="!node.checked && getCheckedAmount(node) > 0"
+          (change)="clickedActive(node)">
+            {{node.name}}
+        </mat-checkbox>
       </div>
       <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
         <ng-container matTreeNodeOutlet></ng-container>
