--- a/frontend/src/app/components/filter/filter.component.html
+++ b/frontend/src/app/components/filter/filter.component.html
@@ -22,8 +22,8 @@
           </mat-icon>
         </button>
         <mat-checkbox class="example-margin"
-          [checked]="bigChildren(node.categories)"
-          [indeterminate]="!node.checked &&!bigChildren(node.categories)"
+          [checked]="childrenChecked(node)"
+          [indeterminate]="!childrenChecked(node) && !allChildrenUnchecked(node)"
           (change)="setAll(node)">
             {{node.name}}
         </mat-checkbox>
