--- a/frontend/src/app/components/filter/filter.component.html
+++ b/frontend/src/app/components/filter/filter.component.html
@@ -1,4 +1,4 @@
-<mat-tree [dataSource]="categories" [treeControl]="treeControl"  class="example-tree" style="padding-left: 1em;">
+<mat-tree [dataSource]="categoriesTree" [treeControl]="treeControl"  class="example-tree" style="padding-left: 1em;">
   <!-- This is the tree node template for leaf nodes -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
     <li class="mat-tree-node">
