--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -17,6 +17,12 @@
                             <input matInput type="text" >
                         </mat-form-field>
                         <br>
+                        <mat-form-field>
+                            <mat-select>
+                                <mat-label>Venue Category</mat-label>
+                                <mat-option></mat-option>
+                            </mat-select>
+                        </mat-form-field>
                         <button mat-raised-button color='primary'>Search</button>
                     </form>
                 </mat-tab>
