--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -7,14 +7,17 @@
             <mat-tab-group dynamicHeight mat-align-tabs="center">
                 <!-- Search Venue -->
                 <mat-tab>
-                    <form>
+                    <form
+                        [formGroup]='searchVenueForm'
+                        (ngSubmit)='onSubmitSearch()'>
                         <ng-template mat-tab-label>
                             <label matTooltip="Search Venue in Database" style="margin: 0;">Search</label>
                         </ng-template>
                         <br>
                         <mat-form-field appearance='outline' style="margin: 0; padding: 0;">
                             <mat-label>Search Venue</mat-label>
-                            <input matInput type="text" >
+                            <input formControlName='name' matInput type="text" >
+                            <small class="text-danger" *ngIf="!searchVenueForm.get('name').valid && searchVenueForm.get('name').touched">name must be between 1 and 25 characters</small>
                         </mat-form-field>
                         &nbsp;
                         <mat-form-field appearance='fill'>
@@ -25,7 +28,11 @@
                             </mat-select>
                         </mat-form-field>
                         <br>
-                        <button mat-raised-button color='primary'>Search</button>
+                        <span class="row container-fluid">
+                            <button mat-raised-button class="col-auto" color='primary' [disabled]='isLoading'>Search</button>
+                            &nbsp;
+                            <mat-spinner *ngIf='isLoading' class="col-auto align-self-center" diameter='30' color='primary'></mat-spinner>                        
+                        </span>
                     </form>
                 </mat-tab>
                 <!-- Custom Venue -->
