--- a/frontend/src/app/components/city-search/city-search.component.html
+++ b/frontend/src/app/components/city-search/city-search.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="example-full-width" style="width: 100%;" [appearance]='appearance'>
-    <mat-label>{{ placheholder }}</mat-label>
+    <mat-label>{{ placeholder }}</mat-label>
     <input type='text' 
     matInput
     placeholder="Ex. Berlin"
