--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -61,7 +61,7 @@
                             </mat-select>
                         </mat-form-field>
                         <hr style="margin-top: 0;">
-                        <app-city-search #citySearch [appearance]='citySearchAppearance' [placheholder]='citySearchPlaceholder'></app-city-search>
+                        <app-city-search #citySearch [appearance]='citySearchAppearance' [placeholder]='citySearchPlaceholder'></app-city-search>
                         <mat-form-field appearance='outline'>
                             <mat-label>Street Address</mat-label>
                             <input matInput type='text' autocomplete="street-address" formControlName='address'>
