--- a/frontend/src/app/components/display-posts/display-posts.component.html
+++ b/frontend/src/app/components/display-posts/display-posts.component.html
@@ -1,6 +1,33 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
-<mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
-  <mat-expansion-panel *ngFor="let post of posts">
+
+<div *ngIf="posts.length > 0 && !isLoading">
+  <div *ngFor="let post of posts">
+    <mat-card class="">
+      <mat-card-header>
+        <div mat-card-avatar class=""></div>
+        <mat-card-title>{{ post.title }}</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+        <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+      </mat-card-header>
+      <p>
+        {{ post.content }}
+      </p>
+      <img mat-card-image [src]="post.imagePath" [alt]="post.title">
+
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
+
+
+
+
+<!-- <mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading"> -->
+  <!-- <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       {{ post.title }}
     </mat-expansion-panel-header>
@@ -12,6 +39,9 @@
       <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
       <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
     </mat-action-row>
-  </mat-expansion-panel>
-</mat-accordion>
+  </mat-expansion-panel> -->
+<!-- </mat-accordion> -->
+
+
+
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
