current working version

--- a/frontend/src/app/components/display-posts/display-posts.component.html
+++ b/frontend/src/app/components/display-posts/display-posts.component.html
@@ -6,7 +6,7 @@
       <mat-card-header>
         <div mat-card-avatar class=""></div>
         <mat-card-title>{{ post.title }}</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-subtitle>Premium User</mat-card-subtitle>
         <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
         <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
       </mat-card-header>
